software/pcx86/sys/dos/dresearch/3.40/index.md
---
layout: page
title: Digital Research DR DOS 3.40
permalink: /software/pcx86/sys/dos/dresearch/3.40/
redirect_from: /disks/pcx86/dos/dresearch/3.40/
machines:
  - id: ibm5170-drdos340
    type: pcx86
    config: /configs/pcx86/machine/ibm/5170/ega/640kb/rev1/machine.xml
    autoMount:
      A:
        name: DR DOS 3.40 (Disk 1)
      B:
        name: DR DOS 3.40 (Disk 2)
---

{% include machine.html id="ibm5170-drdos340" %}

### Directory of DR DOS 3.40 (Disk 1)

     Volume in drive A has no label
     Directory of A:\

    DRBIOS   SYS     16288   1-25-89  12:15p
    DRBDOS   SYS     39201   1-25-89  12:15p
    COMMAND  COM     33104   1-25-89  12:15p
    AUTOEXEC BAT        13   1-25-89  12:15p
    ANSI     SYS      4082   1-25-89  12:15p
    COUNTRY  SYS      5632   1-25-89  12:15p
    VDISK    SYS      3765   1-25-89  12:15p
    EMM386   SYS      8346   1-25-89  12:15p
    DRIVER   SYS      2150   1-25-89  12:15p
    EMMXMA   SYS      5995   1-25-89  12:15p
    ATTRIB   EXE     11080   1-25-89  12:15p
    CHKDSK   COM     20741   1-25-89  12:15p
    DISKCOPY COM     11345   1-25-89  12:15p
    FDISK    COM     20117   1-25-89  12:15p
    FORMAT   COM     17041   1-25-89  12:15p
    INSTALL  EXE     46411   1-25-89  12:15p
    GRAFTABL COM      5941   1-25-89  12:15p
    GRAPHICS COM      2697   1-25-89  12:15p
    KEYB     COM     10470   1-25-89  12:15p
    MODE     COM     10053   1-25-89  12:15p
    REPLACE  EXE     15078   1-25-89  12:15p
    SYS      COM      9686   1-25-89  12:15p
    XCOPY    EXE     18444   1-25-89  12:15p
    RDISK    SYS      3122   3-17-87  10:54a
    CONFIG   SYS        18   3-20-87  10:15a
    RTC      EXE     15872   5-23-88   1:26p
    READ     ME       1751   2-25-87   2:11p
           27 file(s)     338443 bytes
                            9216 bytes free

### Directory of DR DOS 3.40 (Disk 2)

     Volume in drive A has no label
     Directory of A:\

    BACKUP   COM     18737   1-25-89  12:15p
    COMP     COM     11127   1-25-89  12:15p
    DISKCOMP COM     11297   1-25-89  12:15p
    EDITOR   EXE     22884   1-25-89  12:15p
    FASTOPEN EXE       675   1-25-89  12:15p
    FIND     EXE     12908   1-25-89  12:15p
    LABEL    COM      6328   1-25-89  12:15p
    PASSWORD EXE     13348   1-25-89  12:15p
    PRINT    COM     17106   1-25-89  12:15p
    RESTORE  COM     15087   1-25-89  12:15p
    RECOVER  COM     12922   1-25-89  12:15p
    SHARE    EXE       625   1-25-89  12:15p
    SID86    EXE     28160   1-25-89  12:15p
    SORT     EXE      8884   1-25-89  12:15p
    TOUCH    EXE     12140   1-25-89  12:15p
    TREE     COM     10202   1-25-89  12:15p
    XDEL     EXE     10626   1-25-89  12:15p
    XDIR     EXE     14986   1-25-89  12:15p
           18 file(s)     228042 bytes
                          125952 bytes free

