software/pcx86/sys/dos/dresearch/3.41/index.md
---
layout: page
title: Digital Research DR DOS 3.41
permalink: /software/pcx86/sys/dos/dresearch/3.41/
redirect_from: /disks/pcx86/dos/dresearch/3.41/
machines:
  - id: ibm5170-drdos341
    type: pcx86
    config: /machines/pcx86/machine/ibm/5170/ega/640kb/rev1/machine.xml
    autoMount:
      A:
        name: DR DOS 3.41 (Disk 1)
      B:
        name: DR DOS 3.41 (Disk 2)
---

{% include machine.html id="ibm5170-drdos341" %}

### Directory of DR DOS 3.41 (Disk 1)

     Volume in drive A has no label
     Directory of A:\

    DRBIOS   SYS     18304   6-30-89  12:16p
    DRBDOS   SYS     39385   7-14-89  12:00p
    COMMAND  COM     35840   6-30-89  12:16p
    AUTOEXEC BAT        24   6-30-89  12:16p
    ANSI     SYS      4773   6-30-89  12:16p
    COUNTRY  SYS      9216   6-30-89  12:16p
    DISPLAY  SYS      3311   6-30-89  12:16p
    DRIVER   SYS      2150   6-30-89  12:16p
    EMM386   SYS      8266   6-30-89  12:16p
    EMMXMA   SYS      5995   6-30-89  12:16p
    PRINTER  SYS      5448   6-30-89  12:16p
    VDISK    SYS      3765   6-30-89  12:16p
    EGA      CPI     48987   6-30-89  12:16p
    4201     CPI      6680   6-30-89  12:16p
    4208     CPI       348   6-30-89  12:16p
    5202     CPI       361   6-30-89  12:16p
    DISKCOPY COM     11475   6-30-89  12:16p
    INSTALL  EXE     71321   6-30-89  12:16p
    GRAFTABL COM      7051   6-30-89  12:16p
    KEYB     COM     22749   6-30-89  12:16p
    LABEL    COM      6462   6-30-89  12:16p
    MODE     COM     17065   6-30-89  12:16p
    SHARE    EXE       918   6-30-89  12:16p
    SYS      COM      9658   6-30-89  12:16p
           24 file(s)     339552 bytes
                           11264 bytes free

### Directory of DR DOS 3.41 (Disk 2)

     Volume in drive A has no label
     Directory of A:\

    ATTRIB   EXE     11026   6-30-89  12:16p
    BACKUP   COM     18787   6-30-89  12:16p
    CHKDSK   COM     21255   6-30-89  12:16p
    COMP     COM     11081   6-30-89  12:16p
    DISKCOMP COM     11267   6-30-89  12:16p
    EDITOR   EXE     23416   6-30-89  12:16p
    FASTOPEN EXE       675   6-30-89  12:16p
    FDISK    COM     20947   6-30-89  12:16p
    FIND     EXE     12998   6-30-89  12:16p
    FORMAT   COM     18083   6-30-89  12:16p
    GRAPHICS COM      5358   6-30-89  12:16p
    NLSFUNC  EXE       629   6-30-89  12:16p
    PASSWORD EXE     13294   6-30-89  12:16p
    PRINT    COM     16958   6-30-89  12:16p
    RECOVER  COM     12740   6-30-89  12:16p
    REPLACE  EXE     15024   6-30-89  12:16p
    RESTORE  COM     15057   6-30-89  12:16p
    SORT     EXE      8782   6-30-89  12:16p
    SID86    EXE     28160   6-30-89  12:16p
    TOUCH    EXE     12102   6-30-89  12:16p
    TREE     COM     11808   6-30-89  12:16p
    XCOPY    EXE     18390   6-30-89  12:16p
    XDEL     EXE     10700   6-30-89  12:16p
    XDIR     EXE     15158   6-30-89  12:16p
           24 file(s)     333695 bytes
                           19456 bytes free
